# espressif-trainings

./: .gitignore
intro/hardware-check/: Cargo.toml
intro/hello-world/: Cargo.toml
intro/hello-world/.cargo/: config.toml
intro/hello-world/src/: main.rs
intro/http-client/: Cargo.toml
intro/http-client/examples/: http_client.rs
intro/http-client/src/: main.rs
intro/http-server/src/: main.rs
intro/mqtt/exercise/: .gitignore
intro/mqtt/exercise/src/: main.rs
